# tk2_audio

./: .gitignore
tinker_answer_question/: CMakeLists.txt  package.xml
tinker_answer_question/launch/: answer_question.launch
tinker_answer_question/script/: answer_question.py
tinker_audio_msgs/: CMakeLists.txt  package.xml
tinker_audio_msgs/action/: RecognizeKeywords.action
tinker_knowledge/: CMakeLists.txt  package.xml  setup.py
tinker_knowledge/launch/: mark_location.launch
tinker_knowledge/position/: RIPS.xml  arena_a.xml  arena_b.xml  stage.xml  test_navi.xml
tinker_knowledge/question/: keywords.xml  stage-1.xml
tinker_knowledge/script/: checkout_model.sh  mark_location.py
tinker_knowledge/src/tinker_knowledge/: position.py
tinker_knowledge/utils/: download_language_model.py
tinker_sound_localization/: CMakeLists.txt  package.xml
tinker_sound_localization/script/: listen_and_move.py
tinker_tts/: CMakeLists.txt  package.xml
tinker_tts/launch/: tts.launch
tinker_tts/script/: tts.py
tinker_voice_recognize/: CMakeLists.txt  package.xml
tinker_voice_recognize/launch/: continuous_recognize.launch  keywords_recognize.launch  keywords_recognize_2.launch  voice_recognize.launch
tinker_voice_recognize/script/: continuous_recognizer.py  keywords_recognizer.py  recognizer.py
